# VideoSequencer

./: .gitignore  CMakeLists.txt  Info.plist  README.md  assets.qrc  conanfile.txt  converter.cpp  converter.h  imagedata.cpp  imagedata.h  imageformatter.cpp  imageformatter.h  imagewriter.cpp  imagewriter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.txt  vcpkg.json  win.rc
assets/logo/: logo.ai  logo.icns
conan/: conanfile.py
libs/: conanfile.txt
